<resources>
    <string name="app_name">Marvel-verse</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="filters">Filters</string>
    <string name="X">×</string>
    <string name="released_this_week">Released this week</string>
    <string name="released_last_week">Released last week</string>
    <string name="releasing_next_week">Releasing next week</string>
    <string name="released_this_month">Released this month</string>
    <string name="characters">Characters</string>
    <string name="comics">Comics</string>
    <string name="no_results_found">No results found.</string>
</resources>