<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_black"
    tools:context=".fragments.ComicFragment">

    <LinearLayout
        android:id="@+id/filters"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filters"
            android:textSize="16sp" />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/ic_filter" />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/remove_filters"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/X"
        android:textSize="20sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@id/filters"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/filters" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/filter_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="f_last_week,f_next_week,f_this_month,f_this_week" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/f_this_week"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:background="@drawable/unselected_filter"
        android:gravity="center"
        android:paddingVertical="4dp"
        android:text="@string/released_this_week"
        android:textColor="@color/light_black"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/f_last_week"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/remove_filters"
        app:layout_constraintWidth_percent="0.4" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/f_last_week"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:background="@drawable/unselected_filter"
        android:gravity="center"
        android:paddingVertical="4dp"
        android:text="@string/released_last_week"
        android:textColor="@color/light_black"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/f_this_week"
        app:layout_constraintTop_toBottomOf="@id/remove_filters"
        app:layout_constraintWidth_percent="0.4" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/f_next_week"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="6dp"
        android:background="@drawable/unselected_filter"
        android:gravity="center"
        android:paddingVertical="4dp"
        android:text="@string/releasing_next_week"
        android:textColor="@color/light_black"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/f_this_month"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/f_this_week"
        app:layout_constraintWidth_percent="0.4" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/f_this_month"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/unselected_filter"
        android:gravity="center"
        android:paddingVertical="4dp"
        android:text="@string/released_this_month"
        android:textColor="@color/light_black"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/f_next_week"
        app:layout_constraintTop_toBottomOf="@id/f_last_week"
        app:layout_constraintWidth_percent="0.4" />

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/f_next_week" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/comic_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:gravity="center"
        android:text=""
        android:textSize="16sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/f_next_week" />

</androidx.constraintlayout.widget.ConstraintLayout>